hphp/hack/test/typecheck/generics_restrictions/covariance12.php
<?hh // partial

interface X<+T as int> {
  public function test(T $x): void;
}
